<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:text="@string/tv_home"
                android:textColor="@color/primary"
                android:textSize="30sp" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="400dp"
                android:layout_height="500dp"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_fileName="loading.json"
                app:lottie_imageAssetsFolder="assets"
                app:lottie_loop="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:text="@string/tv_manual_home"
                android:textColor="@color/primary"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nunito_italic"
                android:gravity="bottom"
                android:text="@string/tv_manual1"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_italic"
                android:gravity="bottom"
                android:text="@string/tv_manual2"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_italic"
                android:gravity="bottom"
                android:text="@string/tv_manual3"
                android:textColor="@color/black"
                android:textSize="15sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_italic"
                android:gravity="bottom"
                android:text="@string/tv_manual4"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</FrameLayout>