<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.LogoutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/nunito_bold"
                android:textColor="@color/primary"
                android:gravity="center"
                android:text="@string/tv_titulo_logout"
                android:textSize="30sp" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="400dp"
                android:layout_height="450dp"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_fileName="logout.json"
                app:lottie_loop="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nunito_italic"
                android:gravity="center"
                android:text="@string/tv_cerrar"
                android:textSize="19sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:fontFamily="@font/nunito_bold"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:text="@string/btn_cerrar"
                android:background="@drawable/rectangle_1_shape"
                android:layout_marginTop="32dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</FrameLayout>